MKV: Auto audio/subtitles language selection doesn't work.
Preferred audio language and Preferred subtitles language are both ignored, when playing MKV videos.
This issue happens on both vlc-2.1 and vlc-2.0 nightlies. it works fine on VLC-2.0.0.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf assigned to @typx
assigned to @typx
- Jean-Baptiste Kempf added Component::Demuxers label
added Component::Demuxers label
- Author
http://git.videolan.org/?p=vlc.git;a=commit;h=a2790164362bddf5e18c1d0e577e5c7787cc1be6
This commit causes this issue.
- Maintainer
This commit was made to be spec compliant, I need at least the track info to analyze. If tracks are disabled or forced it is a nominal behaviour, if there is a default track and enabled not default tracks then it really is a bug.
- Author
I set Preferred audio language to "jpn". When I play MKV video that has two audio languages, Japanese audio track is not selected.
The following is mkvinfo's output (I deleted seekpoints):
(MKVInfo) + EBML head (MKVInfo) |+ Doc type: matroska (MKVInfo) |+ Doc type version: 1 (MKVInfo) |+ Doc type read version: 1 (MKVInfo) + Segment, size 245183060 (MKVInfo) |+ Segment information (MKVInfo) | + Muxing application: libebml-0.6.4 & libmatroska-0.6.3 (MKVInfo) | + Writing application: VirtualDubMod 1.5.10.1 (build 2439/release) (MKVInfo) | + Segment UID: 0xe0 0x6c 0x70 0x36 0xfc 0x3d 0xfe 0x1e 0xa6 0xbc 0x53 0xde 0x71 0xf2 0x38 0x79 (MKVInfo) | + Duration: 1371.305s (00:22:51.305) (MKVInfo) | + Date: Sat Jul 16 08:28:06 2005 UTC <SNIP> (MKVInfo) |+ EbmlVoid (サイズ:2736) (MKVInfo) |+ Segment tracks (MKVInfo) | + A track (MKVInfo) | + Track number: 1 (track ID for mkvmerge & mkvextract: 0) (MKVInfo) | + Track UID: 913337568 (MKVInfo) | + Track type: video (MKVInfo) | + MinCache: 1 (MKVInfo) | + Codec ID: V_MS/VFW/FOURCC (MKVInfo) | + CodecPrivate, length 40 (FourCC: XVID, 0x44495658) (MKVInfo) | + Lacing flag: 0 (MKVInfo) | + Default duration: 33.367ms (29.970 frames/fields per second for a video track) (MKVInfo) | + Video track (MKVInfo) | + Pixel width: 640 (MKVInfo) | + Pixel height: 480 (MKVInfo) | + Display width: 640 (MKVInfo) | + Display height: 480 (MKVInfo) | + A track (MKVInfo) | + Track number: 2 (track ID for mkvmerge & mkvextract: 1) (MKVInfo) | + Track UID: 519978492 (MKVInfo) | + Track type: subtitles (MKVInfo) | + Codec ID: S_TEXT/UTF8 (MKVInfo) | + Lacing flag: 0 (MKVInfo) | + A track (MKVInfo) | + Track number: 3 (track ID for mkvmerge & mkvextract: 2) (MKVInfo) | + Track UID: 3730029734 (MKVInfo) | + Track type: subtitles (MKVInfo) | + Codec ID: S_TEXT/UTF8 (MKVInfo) | + Lacing flag: 0 (MKVInfo) | + Default flag: 0 (MKVInfo) | + A track (MKVInfo) | + Track number: 4 (track ID for mkvmerge & mkvextract: 3) (MKVInfo) | + Track UID: 2033775217 (MKVInfo) | + Track type: audio (MKVInfo) | + Codec ID: A_VORBIS (MKVInfo) | + CodecPrivate, length 3977 (MKVInfo) | + Audio track (MKVInfo) | + Sampling frequency: 48000 (MKVInfo) | + Channels: 2 (MKVInfo) | + A track (MKVInfo) | + Track number: 5 (track ID for mkvmerge & mkvextract: 4) (MKVInfo) | + Track UID: 3527517314 (MKVInfo) | + Track type: audio (MKVInfo) | + Codec ID: A_VORBIS (MKVInfo) | + Language: jpn (MKVInfo) | + Default flag: 0 (MKVInfo) | + CodecPrivate, length 3977 (MKVInfo) | + Audio track (MKVInfo) | + Sampling frequency: 48000 (MKVInfo) | + Channels: 2 (MKVInfo) |+ Cluster
And VLC log with vlc --extraintf=logger --verbose=2 --logfile=d:\tmp\vlc.log --logmode=text --file-logging http://pastebin.com/PHFT9JS4
- Author
If the track does not contain Default flag, does it mean Default flag: 1?
- Author
Nevertheless if default track is enabled, preferred language setting is ignored?
- Maintainer
If default flag is not set then default is assumed. But you are right this is a bug default should not contradict user pref.
commit 22c24d5a Author: Denis Charmet typx@dinauz.org Date: Tue Mar 13 22:29:02 2012 +0100
MKV: Don't ignore user preferences for track selection Fix [#6375](https://code.videolan.org/videolan/vlc/-/issues/6375) Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
Original author: typx@dinauz.org
- Migration Bot added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed
- Author
Thank you. I confirmed the issue was fixed.
- Jean-Baptiste Kempf changed milestone to %2.0.1
changed milestone to %2.0.1
VLC (2.0.7 on Arch Linux) still/again ignores the audio user preference and plays the 'standard' audio track in matroska files. To reproduce: Take a multilanguage matroska file and change the 'standard' flag to another language with mkvpropedit. Then play the file with VLC, it will pick this language.
- ralemb removed Status::fixed label
removed Status::fixed label
- ralemb reopened
reopened
- Owner
No sample. Worksforme with the previous sample.
- Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed