MKV: Don't ignore user preferences for track selection

Fix #6375

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>